# thermal-sensor-Boson320

./: .gitignore  README.md  environment.sh
Boson_USB/: .gitignore  BosonUSB  README.md
cali_thermal/: .gitignore  README.md
cali_thermal/align_thermal_to_rgb/example_input/SubT_dataset/: camera_model.txt  rgb_intrinsic_file.txt
cali_thermal/align_thermal_to_rgb/result/: plot_imgs.py
cali_thermal/data_ros/: data_collection.py
catkin_ws/src/flir_boson_usb/: CMakeLists.txt  README.md
catkin_ws/src/flir_boson_usb/example_calibrations/: Boson320.yaml  camera_model.txt
catkin_ws/src/flir_boson_usb/include/cali/: align_thermal_to_rgb.h
catkin_ws/src/flir_boson_usb/launch/: align_thermal.launch  flir_boson.launch  flir_boson_rectified.launch  log.launch
catkin_ws/src/flir_boson_usb/src/: ros_align_thermal.cpp
catkin_ws/src/sync_img/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/sync_img/src/: sync_img.cpp
